syntax = "proto3";

package com.mintter;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "proto";

service Documents {
  rpc CreateDraft(CreateDraftRequest) returns (Draft);

  rpc GetDraft(GetDraftRequest) returns (Draft);

  rpc ListDrafts(ListDraftsRequest) returns (ListDraftsResponse);

  // Save current state of the draft. It will replace fields that are non output
  // only. ID is required to identify the draft. Draft must have been created
  // previously using CreateDraft.
  rpc SaveDraft(Draft) returns (Draft);

  rpc DeleteDraft(DeleteDraftRequest) returns (google.protobuf.Empty);

  rpc PublishDraft(PublishDraftRequest) returns (PublishDraftResponse);
}

message CreateDraftRequest {}

message GetDraftRequest {
  // The ID of the document of the draft.
  string document_id = 1;
}

message ListDraftsRequest {
  int32 page_size = 1;

  string page_token = 2;
}

message ListDraftsResponse {
  // List of existing drafts. The returned list will not include content to make
  // the request less expensive. Get the full draft including content by
  // invoking GetDraft.
  repeated Draft drafts = 1;

  // If this is empty, there're no more results.
  string next_page_token = 2;
}

message DeleteDraftRequest {
  // The ID of the document the draft belongs to.
  string document_id = 1;
}

message PublishDraftRequest {}

message PublishDraftResponse {}

// Draft is a working document that is being written to become a publication.
// After being published Draft becomes a Publication. Both Drafts and
// Publications are just list of Sections.
//
// TODO(burdiyan): We will have to get back to this when we start dealing with
// transclusions of third-party sections.
message Draft {
  // Output only. Cannot be updated.
  string document_id = 1;

  // Title of the document.
  string title = 2;

  // Brief description of the content.
  string description = 3;

  // Output only. Cannot be updated.
  string author = 4;

  // List of sections this draft is composed of.
  repeated Section sections = 5;

  // Output only. Time when draft was created.
  google.protobuf.Timestamp create_time = 6;

  // Output only. Time when draft was updated last time.
  google.protobuf.Timestamp update_time = 7;
}

message Section {
  // Output only. The ID of the document this section originally belongs to.
  string document_id = 1;

  // Optional. Title of the section.
  string title = 2;

  // Optional. Brief description of the content of the section.
  string description = 3;

  // Output only. Author of the section.
  string author = 4;

  // Markdown content of the section.
  string body = 5;

  // Output only. Time when section was created.
  google.protobuf.Timestamp create_time = 6;
}

message Publication {
  string document_id = 1;

  string author = 2;

  repeated string sections = 3;

  google.protobuf.Timestamp create_time = 4;

  google.protobuf.Timestamp publish_time = 5;
}